--- a/style.css
+++ b/style.css
@@ -2,3 +2,16 @@
     margin: 0;
     padding: 0;
 }
+
+.myList li {
+    padding-left: 7px;
+    margin-bottom: 15px;
+    transition: all .2s ease-in-out;
+    transform: translate3d(0px, 30px, 0);
+    opacity: 0;
+}
+
+.myList li.active {
+    transform: translate3d(0px, 0, 0);
+    opacity: 1;
+}
